[package]
name = "calc"
version = "0.1.0"
authors = ["chingyat <tsingyat@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ctrlc = "^3.1"

[build-dependencies]
cbindgen = "0.15.0"